# Vista-Js

./: .gitignore  .prettierignore  .prettierrc.json  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Deploy.txt  README.md  VISTA_ROADMAP.md  debug-native.js  debug-scanner.js  developer.md  eslint.cli.config.mjs  eslint.config.mjs  lerna.json  license.md  lint-staged.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.js  render.yaml  run-tests.js  rust-toolchain.toml  sgconfig.yml  socket.yaml  task.md  tsconfig.json  turbo.json  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/headless-browser/: devcontainer-feature.json  install.sh
.devcontainer/node-extras/: devcontainer-feature.json  install.sh
.devcontainer/rust/: devcontainer-feature.json  install.sh
.husky/: pre-push
apps/components/: CopyCommand.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  SingularityShaders.tsx  SmoothScroll.tsx
apps/web/: .swcrc  content-collections.ts  (+5 more)
crates/vista-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.js  vista-native.win32-x64-msvc.node
crates/vista-napi/src/: lib.rs
crates/vista-transforms/: Cargo.toml
crates/vista-transforms/src/: client_directive.rs  lib.rs  naming.rs
crates/vista-transforms/src/rsc/: manifest.rs  mod.rs  prerender.rs  scanner.rs  serializer.rs
scripts/: check-create-vista-command.cjs  test-constants.cjs  test-integrity.cjs  test-regression.cjs  test-structure-validator.cjs  test-vista-hardening.cjs
test-app/: eslint.config.mjs  package-lock.json  package.json
vista-web/: .gitignore  package-lock.json  package.json  vista.config.ts
(+55 files in other folders)
