[workspace]
resolver = "2"

members = [
    "crates/vista-transforms",
    "crates/vista-napi",
]

[workspace.dependencies]
# SWC Core - EXACT same config as Next.js for compatibility
swc_core = { version = "49.0.0", features = [
    "ecma_loader_lru",
    "ecma_loader_parking_lot",
] }

# Node.js bindings
napi = { version = "2", default-features = false, features = [
    "napi3",
    "serde-json",
] }
napi-derive = "2"

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustc-hash = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
